--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blogs - <%= category %></title>
+  <title>Blogs - <%= category ? category.toUpperCase() : "ALL" %></title>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body class="bg-light">
   <div class="container my-4">
-    <h1 class="mb-3">Blogs - <%= category.toUpperCase() %></h1>
+    <h1 class="mb-3">Blogs - <%= category ? category.toUpperCase() : "ALL" %></h1>
 
     <% if (blogs.length > 0) { %>
       <div class="row">
@@ -18,9 +18,11 @@
             <div class="card shadow-sm mb-4">
               <div class="card-body">
                 <h5 class="card-title"><%= blog.title %></h5>
-                <p class="card-text"><%= blog.content.substring(0, 100) %>...</p>
+                <p class="card-text">
+                  <%= blog.content.length > 100 ? blog.content.substring(0, 100) + "..." : blog.content %>
+                </p>
                 <span class="badge bg-secondary"><%= blog.category %></span>
-                <a href="#" class="btn btn-primary mt-2">Read More</a>
+                <a href="/blogs/<%= blog.id %>" class="btn btn-primary mt-2">Read More</a>
               </div>
             </div>
           </div>
