--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>
-    <%= title %>
+    <Zlogify>
   </title>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
 </head>
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#">My Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Create</a>
+            <a class="nav-link" href="/post">Create</a>
           </li>
         </ul>
         <form class="d-flex me-2" role="search">
