--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -12,6 +12,13 @@
   <div class="container mt-4">
     <h1><%= blog.title %></h1>
     <p><%= blog.content %></p>
+    <div class="mt-4 d-flex gap-3">
+      <a href="/blogs/<%= blog._id %>/edit" class="btn btn-warning">Edit</a>
+    
+      <form action="/blogs/<%= blog._id %>/delete" method="POST" onsubmit="return confirm('Are you sure you want to delete this blog?');">
+        <button type="submit" class="btn btn-danger">Delete</button>
+      </form>
+    </div>    
     <a href="/" class="btn btn-secondary">Back to Home</a>
   </div>
 
