--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,9 @@
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" name="password">
+                <input type="password" class="form-control" name="password" required
+                pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}"
+                title="Must be 8+ characters, include upper, lower, number, and special character">
               </div>
               <button type="submit" class="btn btn-dark mt-2">Register</button>
             </form>
