--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,14 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>
-    <Zlogify>
-  </title>
+  <title>Zlogify</title>
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light nav-underline" style="background-color: #FFFDF2">
+  <nav class="navbar navbar-expand-lg navbar-light nav-underline" style="background-color: #bfbcc9">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">ZLOGIFY</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -21,31 +19,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link <%= activePage === 'home' ? 'active' : '' %>" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Explore</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Categories
-            </a>
-            <ul class="dropdown-menu " style="background-color: #FFFDF2">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </li>
-            </ul>
+            <a class="nav-link <%= activePage === 'explore' ? 'active' : '' %>" href="/explore">Explore</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My Posts</a>
+            <a class="nav-link <%= activePage === 'myPosts' ? 'active' : '' %>" href="/myposts">My Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/post">Create</a>
+            <a class="nav-link <%= activePage === 'create' ? 'active' : '' %>" href="/post">Create</a>
           </li>
         </ul>
         <form class="d-flex me-2" role="search">
