--- a/views/blogDetails.ejs
+++ b/views/blogDetails.ejs
@@ -11,7 +11,7 @@
 
   <div class="container mt-4">
     <h1><%= blog.title %></h1>
-    <p><%= blog.content %></p>
+    <p><%- blog.content %></p>
     <div class="mt-4 d-flex gap-3">
       <a href="/blogs/<%= blog._id %>/edit" class="btn btn-warning">Edit</a>
     
