--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light nav-underline" style="background-color: #bfbcc9">
+  <nav class="navbar navbar-expand-lg navbar-light nav-underline" style="background-color: #ffffff">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">ZLOGIFY</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
